--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>TestingRepo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
