--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 	</dependencies>
 
 	<build>
-	<finalName>TestingRepo</finalName>
+	<finalName>testingrepo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
